[package]
name = "mccode_scanner"
version = "0.1.0"
authors = ["youxkei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
imageproc = "0.20.0"
disjoint-sets = "0.4.2"
maplit = "1.0.2"
structopt = "0.3.15"
