[package]
name = "mccode_scanner"
version = "0.0.1"
authors = ["youxkei <youxkei@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "mccode_scanner"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
image = "0.23.4"
imageproc = "0.20.0"
disjoint-sets = "0.4.2"
structopt = "0.3.15"
wasm-bindgen = "0.2.69"
wee_alloc = { version = "0.4.5", optional = true }
maplit = "1.0.2"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
